# GROWW-ai-agent-

./: .dockerignore  .env.example  .env.railway.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  railway.toml
.github/workflows/: weekly-pulse.yml
config/: pipeline.yaml
config/mcp/: docs-mcp.env.example  gmail-mcp.env.example  servers.json
config/products/: groww.yaml
docs/: architecture.md  deployment-railway-vercel.md  edge-cases.md  implementation-plan.md  phase1-run-notes.md  problemStatement.md  problemStatement.txt  production.md  sign-off-checklist.md
frontend/: .gitignore  README.md  next.config.ts  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertBanner.tsx  DashboardFooter.tsx  DashboardHeader.tsx  KpiCard.tsx  KpiGrid.tsx  RunsTable.tsx  Sidebar.tsx  StatusPill.tsx  TopBar.tsx
frontend/lib/: dashboard-data.ts  demo-data.ts  env.ts  types.ts
mcp-servers/gmail-mcp/: README.md  package.json
mcp-servers/google-docs-mcp/: README.md  package.json
pulse/: __init__.py  cli.py  config.py  iso_week.py  logging.py
pulse/agent/: __init__.py  anchor_store.py  backfill.py  doc_delivery.py  email_delivery.py  mcp_client.py  (+4 more)
scripts/: railway-weekly-pulse.sh
stitch_groww_pulse_operator_dashboard/: DESIGN.md
tests/: conftest.py  test_cli.py  test_cli_analyze.py  test_cli_backfill.py  test_cli_deliver_doc.py  test_cli_deliver_email.py  test_cli_ingest.py  test_config.py  test_iso_week.py  test_logging.py  test_models.py  test_smoke.py
(+60 files in other folders)
