[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse"
version = "0.1.0"
description = "Groww Weekly Review Pulse — Play Store insights to Google Workspace"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-play-scraper>=1.2.4",
    "groq>=0.4",
    "hdbscan>=0.8",
    "langdetect>=1.0.9",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
pulse = "pulse.cli:main"
pulse-api = "pulse.api.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require live cache or external APIs",
]
